@@ -1,3 +1,0 @@
-<key_list>
- <key>full_text | SQLCatalog_makeFullTextQuery</key>
-</key_list>
