@@ -1,1 +1,0 @@
-full_text | SQLCatalog_makeFullTextQuery
